fix: added blue line on dnd, resolved issue of sorting in another token set (light/dark/theme in  makes the tab jump back to the first tab

--- a/src/app/styles/tailwind.css
+++ b/src/app/styles/tailwind.css
@@ -465,9 +465,20 @@ input.input {
   border: 1px solid var(--black);
 }
 
+.drag-item {
+  display: none;
+}
+
 .drag-over-item {
-  padding-left: 30px;
-  transition: padding-left 0.5s;
+  padding-left: 5px;
+}
+
+.drag-over-item:after {
+  background-color: var(--blue);
+  content: '';
+  height: 16px;
+  position: absolute;
+  width: 6px;
 }
 
 .radio__label {
